--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -40,14 +40,14 @@ copyright:
     Except where otherwise noted, the blog posts on this site are licensed
     under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
 
-meta: 'See something wrong?  Want to contribute? <a href="https://github.com/oulmanc/oulmanc.github.io/tree/master/_posts">Edit this page 📝</href>' # remove footer without replacing template
+meta: 'See something wrong?  Want to contribute? <a href="https://github.com/oulmanc/oulmanc.github.io/tree/master/_posts">Edit this page</href>' # remove footer without replacing template
 
 not_found:
   statment: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
 
 notification:
   update_found: A new version of content is available!
-  update: Update 🚀
+  update: Update
 
 # ----- Posts related labels -----
 
