--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -22,6 +22,11 @@ search:
   cancel: Cancel
   no_results: Oops! No results found.
 
+panel:
+  lastmod: Recently Updated
+  trending_tags: Trending Tags
+  toc: Contents
+
 copyright:
   # Shown at the bottom of the post
   license:
@@ -34,8 +39,6 @@ copyright:
   verbose: >-
     Except where otherwise noted, the blog posts on this site are licensed
     under the Creative Commons Attribution 4.0 International (CC BY 4.0) License by the author.
-
-meta: 'See something wrong?  Want to contribute? <a href="https://github.com/techno-tim/techno-tim.github.io/tree/master/_posts">Edit this page 📝</href>' # remove footer without replacing template
 
 not_found:
   statment: Sorry, we've misplaced that URL or it's pointing to something that doesn't exist.
